test/error/OpAssignMethod.fu
public static class Test
{
	public static bool Run()
	{
		Run = false; //ERROR: Cannot modify this
		return true;
	}
}
